Mask detected sensitive data in bpmn

--- a/app/components/file-upload-modal.hbs
+++ b/app/components/file-upload-modal.hbs
@@ -102,7 +102,7 @@
       {{#if this.fileHasSensitiveInformation}}
         <AuButton
           @skin="primary"
-          {{on "click" this.handleAnonymization}}
+          {{on "click" (perform this.maskSensitiveData)}}
         >Geselecteerde informatie anonimiseren</AuButton>
       {{/if}}
     </AuButtonGroup>
